--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.10
 Django==3.1
+django-filter==2.3.0
 djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
 psycopg2==2.8.5
